--- a/道具/v1.0/开发者文档.md
+++ b/道具/v1.0/开发者文档.md
@@ -2,77 +2,123 @@
 
 ### API
 
-> 职业模块所对外暴露的所有API
+> 道具模块所对外暴露的所有API
 
 ```java
     /**
-     * 根据职业ID获取职业对象
-     * @param roleId 职业ID
-     * @return 查无结果返回null
+     * 根据指定ID获取道具
+     * @param propId 道具ID
+     * @return 根据指定ID获取道具
      */
-    IRole getById(String roleId);
+    IProp getById(String propId);
 
     /**
-     * 获取所有职业
-     * @return 职业列表
+     * 获取所有道具
+     * @return 获取所有道具
      */
-    List<IRole> getAll();
+    List<IProp> getAll();
 
     /**
-     * 根据玩家ID获取玩家当前的职业数据对象
-     * @param uuid 玩家UUID字符串
-     * @return 查无结果返回null
+     * 永久删除指定道具
+     * 会删除配置文件中的道具信息
+     * 慎用
+     * @param prodId 道具ID
      */
-    IRole getRole(String uuid);
+    void deletePropById(String prodId);
 
     /**
-     * 将指定玩家转职成为指定职业
-     * 会进行筛选当前玩家的转职条件是否满足
-     * @param uuid 玩家UUID字符串
-     * @param roleId 职业ID
-     * @throws ServiceErrorSendMsgException 抛出由玩家原因的操作错误,该异常信息应该向玩家进行消息发送
+     * 以指定玩家的身份来获取,获取指定的 1个 道具
+     * @return 物品
+     * @throws ServiceErrorSendMsgException 程序遇到错误,异常中保存了需要对该玩家输出的信息
      */
-    void upRole(String uuid , String roleId) throws ServiceErrorSendMsgException;
+    ItemStack getItemStackById(Player p , String propId) throws ServiceErrorSendMsgException;
 
     /**
-     * 将指定玩家设置为默认职业
-     * @param uuid 玩家UUID字符串
-     * @throws ServiceErrorSendMsgException 抛出由玩家原因的操作错误,该异常信息应该向玩家进行消息发送
+     * 保存指定道具 , 请确保该道具参数填写完整
+     * @param IProp 道具对象
+     * @return 保存成功或者失败
      */
-    void setPlayerDefRole(String uuid) throws ServiceErrorSendMsgException;
+    boolean saveProp(IProp IProp);
+
 
     /**
-     * 根据玩家ID查询当前玩家能够转职的所有职业
+     * 校验玩家是否有指定数量的道具存在于背包中
+     * @param player 玩家
+     * @param propId 道具ID
+     * @param count 数量
+     * @return 校验玩家是否有指定数量的道具存在于背包中
+     */
+    boolean check(Player player, String propId, int count);
+
+    /**
+     * 删除玩家背包中指定数量的指定道具
+     * @param player 玩家
+     * @param propId 道具ID
+     * @param count 数量
+     * @throws ServiceErrorSendMsgException 程序遇到错误,异常中保存了需要对该玩家输出的信息
+     */
+    void removePlayerItem(Player player, String propId, int count) throws ServiceErrorSendMsgException;
+
+    /**
+     * 根据物品获取一个Prop对象
+     * @param itemStack 物品
+     * @return Prop对象
+     */
+    IProp getPropByItemStack(ItemStack itemStack);
+
+    /**
+     * 校验这个Prop是否能够正常使用
+     * @param propId 道具ID
+     * @return 校验这个Prop是否能够正常使用
+     */
+    boolean propIsPerfect(String propId);
+
+    /**
+     * 让这个玩家使用这个道具
      * @param uuid 玩家ID
-     * @return 职业列表
+     * @param propId 道具ID
      */
-    List<IRole> getListByPlayerId(String uuid);
+    void useProp(String uuid , String propId) throws ServiceErrorSendMsgException;
 
     /**
-     * 检测当前职业是否可用
-     * @param role 职业对象
-     * @return 可用返回true
+     * 获取这个用户这个道具最近一次的使用时间
+     * @param uuid 用户ID
+     * @param propId 道具ID
+     * @return
      */
-    boolean isPerfect(IRole role);
+    long getUserPropRecentUseTime(String uuid , String propId);
 
     /**
-     * 获取这位玩家当前的攻击算法
-     * @param p 玩家
-     * @return 如果没有找到相应算法，返回Null
+     * 设置这个用户这个道具的最近一次的使用时间
+     * @param uuid 用户ID
+     * @param propId 道具ID
+     * @param useTime 使用时间
      */
-    IPlayerAlgorithm getDamageAlgorithmByPlayer(Player p);
+    void setUserPropRecentUseTime(String uuid , String propId , long useTime) throws ServiceErrorSendMsgException;
 
     /**
-     * 获取这为玩家当前的防御算法
-     * @param p 玩家
-     * @return 如果没有找到相应算法，返回Null
+     * 校验玩家这个物品的前置装备条件是否满足
+     * @param player 玩家
+     * @param itemStack 物品
+     * @return 校验玩家这个物品的前置装备条件是否满足
      */
-    String getDefenseAlgorithmByPlayer(Player p);
+    boolean itemUse(Player player , ItemStack itemStack);
+
+    /**
+     * 校验玩家当前主手物品能否使用
+     * @param player 玩家
+     * @return 校验玩家当前主手物品能否使用
+     */
+    boolean checkPlayerMainItem(Player player);
+
+    /**
+     * 校验玩家当前副手物品能否使用
+     * @param player 玩家
+     * @return 校验玩家当前副手物品能否使用
+     */
+    boolean checkPlayerOffItem(Player player);
 ```
 
 ### 事件
 
-|类名      |说明          |
-| -------- | ------------ |
-|SetDefRoleEvent|被设置为默认职业事件|
-|UpRoleEvent|转职成功事件|
+> 无
